Static content fixes.